# My_Muse

./: CMakeLists.txt  README.md  main.cpp
Dependencies/lib/: libtag.so.1.18.0  libtag_c.so.0.0.0
Dependencies/lib/pkgconfig/: taglib.pc  taglib_c.pc
